EPMRPP-84226 || Remove access token logic from the code